# taskmanager-ghActions

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/taskmanager/: main.py
src/taskmanager/controllers/: task_controller.py
src/taskmanager/models/: task_model.py
src/taskmanager/views/: task_view.py
tests/: conftest.py  test_integration.py  test_task_controller.py  test_task_model.py  test_task_view.py
