[tool.poetry]
name = "taskmanager"
version = "3.1.0"
description = ""
authors = ["Shahin ABDI <contact@shahinabdi.fr>"]
readme = "README.md"
packages = [{include = "taskmanager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html"
